# shade_runner

./: Cargo.toml  LICENSE  README.md
examples/: compile.rs
src/: compiler.rs  error.rs  layouts.rs  lib.rs  reflection.rs  srvk.rs  watch.rs
tests/: tests.rs
tests/shaders/: frag2.glsl  frag3.glsl  frag4.glsl  vert2.glsl  vert3.glsl
