[package]
name = "shade_runner"
version = "0.1.0"
authors = ["Tom Gowan <tomrgowan@gmail.com>"]
edition = "2018"

[dependencies]
notify = "4"
shaderc = "0.5"
spirv-reflect = "0.2"
vulkano = { git = "https://github.com/mitchmindtree/vulkano", branch = "nannou_patches" }

[dev-dependencies]
vulkano = { git = "https://github.com/mitchmindtree/vulkano", branch = "nannou_patches" }
color-backtrace = "0.1" 
difference = "2"
