[package]
name = "shade_runner"
version = "0.2.0"
authors = ["Tom Gowan <tomrgowan@gmail.com>"]
edition = "2018"
description = "Allows runtime hot loading of shaders for vulkano"
documentation = "https://docs.rs/shade_runner"
repository = "https://github.com/freesig/shade_runner"
readme = "README.md"
license = "MIT"
keywords = ["vulkan", "vulkano", "shaders", "hotloading"]

[dependencies]
notify = "4"
shaderc = "0.6"
spirv-reflect = "0.2"
vulkano = "0.14"

[dev-dependencies]
color-backtrace = "0.1" 
difference = "2"
